--- a/challenge/css/styles.css
+++ b/challenge/css/styles.css
@@ -19,6 +19,26 @@ a:link {
     color: goldenrod;
   }
   
+  .games {
+    display: grid;
+    grid-template-columns: auto auto;
+  }
+
+
+  /* .study {
+    text-align: center;
+    display: grid;
+    grid-template-columns: auto;
+  } */
+
+  button{
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    margin: 10px;
+    font-size: 16px;
+    border: none;
+  }
   
   header, main, footer {
       max-width: 700px;
@@ -30,10 +50,7 @@ a:link {
   
   header {
       background-color:#3a9cab;
-      border-radius: 10px;
       text-align: center;
-      margin-top: 30px; 
-      border-style: groove;
   }
   
   h1 {
@@ -60,15 +77,11 @@ a:link {
   
   footer {
       background-color:#3a9cab;
-      border-radius: 10px;
       text-align: center;
       padding: 5px;
       color: white;
-      border-style: ridge;
    
    }
-
-
 
    .dropbtn {
     background-color: #4CAF50;
