team code stretch goal

--- a/team/week8/styles.css
+++ b/team/week8/styles.css
@@ -11,10 +11,16 @@ header, footer{
     color: chartreuse;
 }
 
+#details{
+    display: grid;
+    grid-template-columns: auto auto;
+}
 ul{
     list-style-type: none;
 }
 #onward{
     float: right;
 }
-
+.view-btn{
+    border: none;
+}
