team week 9 submit

--- a/team/week9/style.css
+++ b/team/week9/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
+  background: url(https://i.imgur.com/b9r5sEL.jpg) bottom center;
   background-size: cover;
 }
 
@@ -38,6 +38,14 @@ body,html {
   transform: scale(1.1);
   border-color: #ffc600;
   box-shadow: 0 0 1rem #ffc600;
+}
+
+.position{
+  translate (0px, 10px);
+}
+
+.hidden{
+  display: none;
 }
 
 kbd {
