--- a/week9/design.css
+++ b/week9/design.css
@@ -1,74 +1,56 @@
+@import url('https://fonts.googleapis.com/css?family=Baloo+Da|Roboto');
 
-/* unvisited link */
-a:link {
-    color: darkblue;
-    text-decoration: none;
-  }
-  
-  /* visited link */
-  a:visited {
-    color: darkblue;
-  }
-  /* mouse over link */
-  a:hover {
-      color: goldenrod;
-    }
-  
-  /* selected link */
-  a:active {
-    color: goldenrod;
-  }
-  
-  
-  header, main, footer {
-      max-width: 700px;
-      margin: 0 auto;
-      font-family: 'Noto Sans JP', sans-serif;
-      padding: 10px;
-      
-  }
-  
-  header {
-      background-color:#3a9cab;
-      border-radius: 10px;
-      text-align: center;
-      margin-top: 30px; 
-      border-style: groove;
-  }
-  
-  h1 {
-      color: white;
-      font-family: 'Acme', sans-serif;
-  }
-  h2 {
-      border-bottom: 1px solid rgb(0, 0, 0);
-      padding: 10px;
-  }
-  
-  img {
-     width: 150px;
-     height: auto;
-     border-radius: 10px;
-     box-shadow: 5px 5px 7px grey;
-     float: right;
-  
-  }
-  div {
-    border-radius: 10px;
-    box-shadow: 5px 5px 7px grey;
-    padding: 10px;
-    margin: 10px;
-  }
-  body{
-      font-size: 16px;
-  }
-  
-  footer {
-      background-color:#3a9cab;
-      border-radius: 10px;
-      text-align: center;
-      padding: 5px;
-      color: white;
-      border-style: ridge;
-   
-   }
+body{
+  background: #5F1C1C;
+  font-family: 'Roboto', sans-serif;
+}
+.dojo{
+  background: navy;
+  width: 100%;
+  height: 800px;
+  background-size: 100% auto;
+  padding-top: 10px;
+}
+.quiz-body{
+  background: rgba(255,255,255,1);
+  margin: 150px 33%;
+  padding: 10px 20px 50px 20px;
+  -webkit-box-shadow: 4px 4px 11px 3px rgba(0,0,0,0.3);
+-moz-box-shadow: 4px 4px 11px 3px rgba(0,0,0,0.3);
+box-shadow: 4px 4px 11px 3px rgba(0,0,0,0.3);
+}
+h1{
+  color: #611BBD;
+  font-family: 'Baloo Da', cursive;
+  font-weight: 900;
+  text-align: center;
+  font-size: 48px;
+  margin: 0;
+}
+button {
+  color: #ffffff;
+  background-color: #611BBD;
+  border-color: #130269;
+  border-radius: 4px;
+  margin: 0.2em 0;
+  display: block;
+  width: 100%;
+  font-size: 24px;
+}
+#question {
+ font-size: 24px;
+}
+
+#result{
+  color: #fff;
+  margin: 0.2em 0;
+  width: 100%;
+  text-align: center;
+}
+.correct {
+    background-color: #0c0;
+}
+.wrong {
+  color: #fff;
+  background-color: #c00;
+}
