--- a/challenge/css/design.css
+++ b/challenge/css/design.css
@@ -41,8 +41,32 @@ box-shadow: 4px 4px 11px 3px rgba(0,0,0,0.3);
  font-size: 24px;
 }
 
+#response input[type="radio"] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
+}
+
+#response label {
+  display: inline-block;
+  width: 75%;
+  background-color: #ddd;
+  padding: 10px 20px;
+  margin: 5px;
+  border: 2px solid #444;
+  border-radius: 4px;
+}
+
+#response input[type="radio"]:focus + label {
+  background-color: #9fc5e8ff;
+  border: 2px solid rgb(113, 169, 221);
+}
+
+
 #result{
   color: #fff;
+  padding-top: 10px;
+  padding-bottom: 10px;
   margin: 0.2em 0;
   width: 100%;
   text-align: center;
@@ -56,7 +80,7 @@ box-shadow: 4px 4px 11px 3px rgba(0,0,0,0.3);
     grid-template-columns: auto auto;
 }
 .correct {
-    background-color: #6aa84fff;
+    background-color:#6aa84fff;
 }
 .wrong {
   color: #fff;
