--- a/challenge/css/design.css
+++ b/challenge/css/design.css
@@ -10,31 +10,13 @@ body{
   background-size: 100% auto;
   padding-top: 10px;
 }
-.quiz-body{
+/* .quiz-body{
   background: rgba(255,255,255,1);
   margin: 150px 33%;
   padding: 10px 20px 50px 20px;
   -webkit-box-shadow: 4px 4px 11px 3px rgba(0,0,0,0.3);
 -moz-box-shadow: 4px 4px 11px 3px rgba(0,0,0,0.3);
 box-shadow: 4px 4px 11px 3px rgba(0,0,0,0.3);
-}
-/* h1{
-  color: goldenrod;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 900;
-  text-align: center;
-  font-size: 48px;
-  margin: 0;
-} */
-/* button {
-  color: #ffffff;
-  background-color: goldenrod;
-  border-color: #130269;
-  border-radius: 4px;
-  margin: 0.2em 0;
-  display: block;
-  width: 100%;
-  font-size: 24px;
 } */
 
 #question {
@@ -62,7 +44,6 @@ box-shadow: 4px 4px 11px 3px rgba(0,0,0,0.3);
   border: 2px solid rgb(113, 169, 221);
 }
 
-
 #result{
   color: #fff;
   padding-top: 10px;
@@ -83,6 +64,8 @@ box-shadow: 4px 4px 11px 3px rgba(0,0,0,0.3);
     background-color:#6aa84fff;
 }
 .wrong {
-  color: #fff;
-  background-color: rgb(124, 18, 18);
+  background-color: rgb(114, 40, 40);
+}
+.info {
+  background-color: rgb(102, 102, 102);
 }
