--- a/challenge/css/styles.css
+++ b/challenge/css/styles.css
@@ -37,11 +37,10 @@ a:link {
     color: #0b5394ff;
   }
   
-  .fixed {
-    position: fixed;
+  .relative {
+    position: relative;
     top: 30px;
-    right: 60px;
-    
+    right: -43%;
   }
 
   a.icon:link {
@@ -49,9 +48,9 @@ a:link {
     border: groove rgb(209, 208, 208) 3px;
     padding-top: 20px;
   }
-
-
-
+  a.icon:hover {
+    color:  rgb(209, 208, 208);
+  }
 
   .games{
     display: grid;
@@ -88,11 +87,10 @@ a:link {
     font-size: 16px;
     border: none;
     border-radius: 4px;
-    
   }
   
   header, main, footer {
-      max-width: 700px;
+      max-width: 1000px;
       margin: 0 auto;
       font-family: 'Roboto', sans-serif; 
       padding: 10px;
